# file-share

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
src/: app.css  app.html  input.css  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_sync.rs  lib.rs  local_dir_man.rs  main.rs  server.rs  types.rs
src-tauri/vault/: paths.toml
src/icons/: close.svelte
src/routes/: +layout.svelte  +page.svelte
